<resources>
    <string name="app_name">Bunkies</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="choose_marital_status">Choose a marital status</string>
    <string name="gender_preference">Tell us your gender_preference</string>
    <string name="occupational_reference">Tell us your occupational preference</string>
    <string name="proceed">Proceed</string>
    <string name="go_back">go back</string>
    <string name="personal_traits">Personal Traits</string>
    <string name="personal_interests">Personal Interests</string>
    <string name="personal_habits">Personal Habits</string>
    <string name="clean_freak_question">Are you a clean freak?</string>
    <string name="party_animal_question">Are you a party animal?</string>
    <string name="pets_question">Are you okay with pets?</string>
    <string name="smoking_question">Is smoking acceptable?</string>
    <string name="living_habits">Living Habits</string>
    <string name="food_choice_question">What is Your Food Choice?</string>
    <string name="share_a_toilet_question">Would You Share A Toilet?</string>
    <string name="neighbourhood">Neighbourhood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="verified">Verified</string>
    <string name="roommate_image">Roommate image</string>
    <string name="budget">Budget</string>
    <string name="rooms">Rooms</string>
    <string name="bills">Bills</string>
    <string name="bio">As much as I cringe writing bios about myself, this is necessary and I am left with no option than to write a bio about myself. I like reading and if you make the unfortunate choice to have me as your roommate, you\'ll spend your waking days alone because I\'ll be buried head deep in my world of books, except you want to join me, of course.</string>
    <string name="send_message">Send Message</string>
    <string name="send_a_message">Send a message</string>
    <string name="title_activity_post_roommate">PostRoommateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="location_rent_availability"><![CDATA[Location, Rent & Availability]]></string>
    <string name="room_overview_attributes"><![CDATA[Room overview & Attributes]]></string>
    <string name="living_choices">Living Choices</string>
    <string name="start_new_chat">Start new chat</string>
</resources>