<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".modules.account_setup.personal.PersonalHabitsActivity">

    <ImageView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:tint="@color/textColor2"
        android:contentDescription="@string/go_back"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_habits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/go_back"
        app:layout_constraintBottom_toBottomOf="@+id/go_back"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/textColor2"
        android:fontFamily="@font/montserrat_semi_bold" />

    <TextView
        android:id="@+id/clean_freak_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean_freak_question"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintTop_toBottomOf="@+id/go_back"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/_12ssp" />

    <RadioGroup
        android:id="@+id/clean_freak_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clean_freak_question"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/clean_freak_question"
        app:layout_constraintBottom_toBottomOf="@+id/clean_freak_question">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

    </RadioGroup>

    <TextView
        android:id="@+id/party_animal_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party_animal_question"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintTop_toBottomOf="@+id/clean_freak_question"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/_12ssp" />

    <RadioGroup
        android:id="@+id/party_animal_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/party_animal_question"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/party_animal_question"
        app:layout_constraintBottom_toBottomOf="@+id/party_animal_question">

        <RadioButton
            android:id="@+id/party_animal_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

        <RadioButton
            android:id="@+id/party_animal_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

    </RadioGroup>

    <TextView
        android:id="@+id/pets_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pets_question"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintTop_toBottomOf="@+id/party_animal_question"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/_12ssp" />

    <RadioGroup
        android:id="@+id/pets_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pets_question"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/pets_question"
        app:layout_constraintBottom_toBottomOf="@+id/pets_question">

        <RadioButton
            android:id="@+id/pets_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

        <RadioButton
            android:id="@+id/pets_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

    </RadioGroup>

    <TextView
        android:id="@+id/smoking_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoking_question"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintTop_toBottomOf="@+id/pets_question"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/_12ssp" />

    <RadioGroup
        android:id="@+id/smoking_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/smoking_question"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/smoking_question"
        app:layout_constraintBottom_toBottomOf="@+id/smoking_question">

        <RadioButton
            android:id="@+id/smoking_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

        <RadioButton
            android:id="@+id/smoking_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

    </RadioGroup>

    <TextView
        android:id="@+id/guests_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do you like lots of guests?"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintTop_toBottomOf="@+id/smoking_question"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/_12ssp" />

    <RadioGroup
        android:id="@+id/guests_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guests_question"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/guests_question"
        app:layout_constraintBottom_toBottomOf="@+id/guests_question">

        <RadioButton
            android:id="@+id/guests_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

        <RadioButton
            android:id="@+id/guests_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textColor2" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceed_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="@+id/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/primary_button"
        android:text="@string/proceed"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/secondary" />

</androidx.constraintlayout.widget.ConstraintLayout>